[package]
name = "eccoxide"
version = "0.3.1"
authors = ["Vincent Hanquez <vincent@typed.io>"]
edition = "2018"
keywords = [ "Crypto", "Cryptography", "ECC", "Elliptic", "Curve" ]
categories = [ "cryptography" ]
license = "MIT/Apache-2.0"
description = "elliptic curve cryptography (ECC) framework"
homepage = "https://github.com/vincenthz/eccoxide/"
repository = "https://github.com/vincenthz/eccoxide/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.3", optional = true }
num-traits = { version = "0.2", optional = true }

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "curves"
harness = false

[features]
default = ["sec2", "table"]

# Embed fixed-base (generator) precomputation tables so `Point::mul_base` uses a
# constant-time comb (~4x faster than a variable-base scalar mult). This adds a
# sizeable amount of static data to the binary; when disabled, `mul_base` falls
# back to a normal scalar multiplication of the generator.
table = []

# SEC2 curves enabled by default (192, 224 are probably too small in 2020)
sec2 = ["p192k1", "p192r1", "p224k1", "p224r1", "p256k1", "p256r1", "p384r1", "p521r1"]

# This is not recommended to enable as the size is too small for cryptographic needs
sec2-small = ["p112r1", "p112r2", "p128r1", "p128r2", "p160k1", "p160r1", "p160r2", "num-bigint", "num-traits"]

p112r1 = []
p112r2 = []
p128r1 = []
p128r2 = []
p160k1 = []
p160r1 = []
p160r2 = []
p192k1 = []
p192r1 = []
p224k1 = []
p224r1 = []
p256k1 = []
p256r1 = []
p384r1 = []
p521r1 = []
